--- a/app/src/main/res/layout/activity_signup1.xml
+++ b/app/src/main/res/layout/activity_signup1.xml
@@ -84,6 +84,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/male"
                 android:background="@drawable/gender_bg"
                 android:backgroundTint="@color/ThemeColor"
                 android:gravity="center"
@@ -96,6 +97,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/female"
                 android:background="@drawable/gender_female"
                 android:gravity="center"
                 android:text="Female"
@@ -118,7 +120,7 @@
             android:textStyle="bold" />
 
         <DatePicker
-            android:id="@+id/simpleDatePicker"
+            android:id="@+id/datePicker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -135,7 +137,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/cnic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
