--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -28,7 +28,7 @@
             <View
                 android:layout_width="200dp"
                 android:layout_height="1dp"
-                android:background="#888888"
+                android:background="@color/viewGrey"
                 android:layout_gravity="center"
                 android:layout_marginEnd="10dp"
                 android:layout_marginTop="3dp"/>
@@ -77,7 +77,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#888888"
+                    android:background="@color/viewGrey"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="20dp"
@@ -148,7 +148,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#888888"
+                    android:background="@color/viewGrey"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="20dp"
@@ -195,7 +195,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_gravity="center"
-                        android:background="#888888"
+                        android:background="@color/viewGrey"
                         android:layout_marginTop="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -223,7 +223,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#888888"
+                    android:background="@color/viewGrey"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="20dp"
@@ -270,7 +270,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_gravity="center"
-                        android:background="#888888"
+                        android:background="@color/viewGrey"
                         android:layout_marginTop="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -319,7 +319,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_gravity="center"
-                        android:background="#888888"
+                        android:background="@color/viewGrey"
                         android:layout_marginTop="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -368,7 +368,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_gravity="center"
-                        android:background="#888888"
+                        android:background="@color/viewGrey"
                         android:layout_marginTop="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -417,7 +417,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_gravity="center"
-                        android:background="#888888"
+                        android:background="@color/viewGrey"
                         android:layout_marginTop="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -445,7 +445,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#888888"
+                    android:background="@color/viewGrey"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="20dp"
@@ -530,7 +530,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#888888"
+                    android:background="@color/viewGrey"
                     android:layout_gravity="center"
                     android:layout_marginTop="12dp"
                     android:layout_marginStart="20dp"
@@ -556,7 +556,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#888888"
+                    android:background="@color/viewGrey"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="20dp"
@@ -582,7 +582,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#888888"
+                    android:background="@color/viewGrey"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="20dp"
