--- a/app/src/main/res/layout/fragment_bank.xml
+++ b/app/src/main/res/layout/fragment_bank.xml
@@ -26,12 +26,13 @@
                 android:textSize="20sp" />
 
             <View
-                android:layout_width="200dp"
+                android:layout_width="150dp"
                 android:layout_height="1dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="10dp"
-                android:background="#888888" />
+                android:background="@color/viewGrey"
+                />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -81,7 +82,8 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
-                    android:background="#888888" />
+                    android:background="@color/viewGrey"
+                    />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -127,7 +129,8 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
-                    android:background="#888888" />
+                    android:background="@color/viewGrey"
+                    />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -170,7 +173,7 @@
                         android:layout_height="1dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
-                        android:background="#888888"
+                        android:background="@color/viewGrey"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView10" />
