--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -31,7 +31,8 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="10dp"
-                android:background="#888888" />
+                android:background="@color/viewGrey"
+                />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -69,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginTop="5dp"
                     android:text="Home 1"
                     android:textSize="15sp" />
 
@@ -80,7 +81,8 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
-                    android:background="#888888" />
+                    android:background="@color/viewGrey"
+                    />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -91,32 +93,15 @@
                     android:textColor="@color/black"
                     android:textSize="17sp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="20dp">
-
-
-                        <TextView
-                            android:id="@+id/textView7"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Supervisor"
-                            android:textSize="15sp"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                </LinearLayout>
-
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
+                    android:text="Supervisor"
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <View
                     android:layout_width="match_parent"
@@ -125,7 +110,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
-                    android:background="#888888" />
+                    android:background="@color/viewGrey" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -144,6 +129,52 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardView_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardBackgroundColor="@color/ThemeColor"
+                        app:cardCornerRadius="17dp"
+                        android:layout_marginTop="5dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView9"
+                        app:cardElevation="0dp"
+                        android:visibility="visible"
+                        android:layout_marginEnd="25dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentEnd="true">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/linear"
+                        android:layout_margin="3dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/category_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:lines="1"
+                            android:text="Category Name"
+                            android:textColor="@color/white"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="20dp"/>
+                        <ImageView
+                            android:id="@+id/cross"
+                            android:layout_width="27dp"
+                            android:layout_height="27dp"
+                            android:src="@drawable/ic_cancel_circle"
+                            android:layout_gravity="center_vertical"
+                            android:scaleType="centerInside"
+                            android:padding="5dp"/>
+
+
+                    </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+<!--
+
                     <TextView
                         android:id="@+id/textView10"
                         android:layout_width="wrap_content"
@@ -153,6 +184,7 @@
                         android:textSize="15sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView9" />
+-->
 
                     <ImageView
                         android:layout_width="25dp"
@@ -167,10 +199,10 @@
                         android:layout_height="1dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
-                        android:background="#888888"
+                        android:background="@color/viewGrey"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                        app:layout_constraintTop_toBottomOf="@+id/cardView_type" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -200,50 +232,43 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
-                    android:background="#888888" />
+                    android:background="@color/viewGrey"
+                    />
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp">
 
                     <TextView
-                        android:id="@+id/textVw9"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
                         android:text="Email"
                         android:textColor="@color/black"
-                        android:textSize="17sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:textSize="17sp" />
 
                     <TextView
                         android:id="@+id/textVi10"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
                         android:drawableLeft="@drawable/at_icon"
                         android:drawablePadding="7dp"
                         android:paddingStart="2dp"
                         android:text="abc@gmail.com"
-                        android:textSize="15sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textVw9" />
+                        android:textSize="15sp"/>
 
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
-                        android:background="#888888"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textVi10" />
+                        android:background="@color/viewGrey" />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -287,7 +312,7 @@
                         <androidx.appcompat.widget.SwitchCompat
                             android:id="@+id/customSwitch"
                             android:layout_width="wrap_content"
-                            android:layout_height="15dp"
+                            android:layout_height="20dp"
                             android:layout_marginEnd="52dp"
                             android:checked="true"
                             android:paddingStart="10dp"
@@ -327,7 +352,7 @@
                         android:layout_height="1dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
-                        android:background="#888888"
+                        android:background="@color/viewGrey"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textViw0" />
@@ -377,7 +402,7 @@
                         <androidx.appcompat.widget.SwitchCompat
                             android:id="@+id/customSwitchPhone"
                             android:layout_width="wrap_content"
-                            android:layout_height="15dp"
+                            android:layout_height="20dp"
                             android:layout_marginEnd="52dp"
                             android:checked="true"
                             android:paddingStart="10dp"
