--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -30,7 +30,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="20dp"
-                android:background="#888888" />
+                android:background="@color/viewGrey" />
 
         </LinearLayout>
 
@@ -52,7 +52,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
-                    android:text="Bussiness Name"
+                    android:text="Business Name"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
@@ -263,8 +263,8 @@
                     <androidx.appcompat.widget.SwitchCompat
                         android:id="@+id/customSwitch"
                         android:layout_width="wrap_content"
-                        android:layout_height="15dp"
-                        android:layout_marginEnd="52dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="50dp"
                         android:checked="true"
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
